--- a/Fundamentos Js/Clase6-Ciclos/index.html
+++ b/Fundamentos Js/Clase6-Ciclos/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Variables Dom</title>
+	<title>Ciclos interactuando con DOM</title>
     <script src="Js/Sintaxis.js"></script>
+    <script src="Js/Ciclos.js"></script>
+    <script type="text/javascript" src="Js/Ciclos.js"></script>
+
 </head>
 <body>
 <div id="box"> <h2>Vamos a portarnos mal</h2> </div>
 <div class="Boxes"> <h2>Caja 1</h2> </div>
 <div class="Boxes"> <h2>Caja 2</h2> </div>
 <div class="Boxes"> <h2>Caja 3</h2> </div>
-<script src="Js/CondicionesYCambios.js"></script>
+<div class="Boxes"> <h2>Caja 4</h2> </div>
+<button onclick="probar()"></button>
+
 <!--<script src="Js/Variables.js"></script> -->
 </body>
 </html>
