--- a/Fundamentos Js/Clase7-Eventos/index.html
+++ b/Fundamentos Js/Clase7-Eventos/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Ciclos interactuando con DOM</title>
-    <script src="Js/Sintaxis.js"></script>
-    <script src="Js/Ciclos.js"></script>
+	<title>Eventos</title>
 
 </head>
 <body>
@@ -13,8 +11,11 @@
 <div class="Boxes"> <h2>Caja 2</h2> </div>
 <div class="Boxes"> <h2>Caja 3</h2> </div>
 <div class="Boxes"> <h2>Caja 4</h2> </div>
-<button onclick="probar()"></button>
+<button style="display: block" onclick="cambiar()">Cambiar cuadro</button>
+<button id="boton">Eventos desde js</button>
 
+<div id="puto" style="width:200px;height: 200px;background: aqua"></div>
+<script src="Js/Evento.js"></script>
 <!--<script src="Js/Variables.js"></script> -->
 </body>
 </html>
