Clase 3 y 4 de formularios, evento focus y blur.

--- a/9-Formularios JS/Clase4-Evento blur/index.html
+++ b/9-Formularios JS/Clase4-Evento blur/index.html
@@ -398,7 +398,7 @@
 <script src="js/galeria.min.js"></script>
 <script src="js/mouse.min.js"></script>
 <script src="js/scroll.js"></script>
-<script src="js/Formulario.js"></script>
+<script src="js/FormularioFocus.js"></script>
 
 </body>
 </html>
